ecmascript/parser/tests/test262-error-references/fail/fc75a023944da475.js.stderr
error: TS1056
 --> $DIR/tests/test262-parser/fail/fc75a023944da475.js:1:11
  |
1 | x = { set method(val) v = val }
  |           ^^^^^^

